kind/ecommerce/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce-backend
  name: ecommerce-backend
  namespace: ecommerce
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: ecommerce-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-backend
      namespace: ecommerce
    spec:
      containers:
      - image: 920373006757.dkr.ecr.ap-southeast-1.amazonaws.com/dev/aeh/backend:v2
        imagePullPolicy: IfNotPresent
        name: ecommerce-backend
        ports:
        - containerPort: 8080
          name: tcp
          protocol: TCP
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        volumeMounts:
        - name: application-properties
          mountPath: "/run/config/application.properties"
          subPath: "application.properties"
      volumes:
      - name: application-properties
        configMap:
          name: ecommerce-backend-application-properties-configmap
      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ecommerce-backend
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: api-ecommerce.devopsedu.vn
    http:
      paths:
      - backend:
          service:
            name: ecommerce-backend-service
            port:
              number: 8080
        path: /
        pathType: Prefix
